...
export const VideoSecion = (props: IVideos) => {
  return (
    <>
      <SectionHeader header={props.header} />
      <FlatList
        data={props.assets}
        testID={'video-flat-list'}
        horizontal
        showsHorizontalScrollIndicator={false}
        keyExtractor={(item, index) => `${item.title}${index}`}
        renderItem={({item, index}) => {
          return (
            <Button
...
